[package]
name = "loglux"
description = "Et lux fut"
authors = ["Rareș <rares@getbetter.ro>"]
version = "1.0.0"
edition = "2021"

[dependencies]
lexopt = "0.3.0"
num-traits = "0.2.19"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.smol]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
