[package]
name = "loglux"
description = "Et lux fut"
authors = ["Rareș <rares@getbetter.ro>"]
version = "1.0.2"
edition = "2021"

[dependencies]
lexopt = "0.3.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.smol]
inherits = "release"
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[dev-dependencies]
lazy_static = "1.5.0"
quickcheck = "1.0.3"
